--- a/app/2-counter/index.html
+++ b/app/2-counter/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <h1>Token Number</h1>
-    <h1>    </h1>
+    <h1 id= "display" >    </h1>
     <div>
         <button id= "counter"> Next</button>
     </div>
