--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <ul>
-        <li><a href="app/color-flipper/index.html">Colour-Flipper</a></li>
+        <li a href="app/color-flipper/index.html">color-flipper</li>
+        <li a href="app/TODO-List/index.html">TODO-LIST</li>
+        <li a href="app/token-counter/index.html">Token-counter</li>
+        <li a href="Unit-economics/index.html">Unit-economics</li>
+        <li a href="app/vu-player/index.html">Vu-player</li>
     </ul>
 </body>
 </html>
